// Me_Tang ER diagram (NAT-8)
// Paste into https://dbdiagram.io/d — mirrors db/schema.prisma.
// db/schema.prisma is the source of truth; update this file when it changes.

Project me_tang {
  database_type: 'PostgreSQL'
  Note: 'CMU student emergency loan system. Approval chain: advisor > admin > executive > admin disburses.'
}

Enum user_role_name {
  student
  advisor
  admin
  super_admin
  executive
}

Enum loan_status {
  draft                [note: 'student still filling the form']
  returned             [note: 'sent back for edit — distinct from a final rejection']
  pending_advisor      [note: 'NAT-19 step 1']
  pending_admin        [note: 'NAT-19 step 2']
  pending_executive    [note: 'NAT-19 step 3']
  pending_disbursement [note: 'NAT-19 step 4: back to admin to move the money']
  disbursed
  closed
  rejected
  cancelled
}

Enum approval_step {
  advisor
  admin
  executive
}

Enum decision {
  pending
  approved
  returned  [note: 'fix and resubmit']
  rejected  [note: 'final no']
}

Enum notification_status {
  pending
  processing
  retry
  delivered
  failed
}

Table app_user {
  id           uuid [pk, default: `gen_random_uuid()`]
  email        text [not null, unique]
  cmu_account  text [not null, unique]
  student_code text [unique, note: 'null for staff']
  full_name_th text [not null]
  full_name_en text
  phone        text [note: 'student contact number, typed by the student — not from CMU SSO']
  created_at   timestamptz [not null, default: `now()`]
  updated_at   timestamptz [not null, default: `now()`]

  indexes {
    full_name_th [note: 'advisor_name is matched back to a person by name']
  }
  Note: 'One row per human, whatever role they hold. NAT-16 (CMU SSO).'
}

Table user_role {
  user_id    uuid [ref: > app_user.id, not null]
  role       user_role_name [not null]
  granted_by uuid [ref: > app_user.id]
  granted_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, role) [pk]
  }
  Note: 'NAT-52: multi-role per person. Partial unique index on role WHERE role = executive keeps exactly one executive.'
}

Table loan_request {
  id                uuid [pk, default: `gen_random_uuid()`]
  student_id        uuid [ref: > app_user.id, not null]
  advisor_id        uuid [ref: > app_user.id, not null]
  amount            integer [not null, note: 'whole baht; what the student asked for']
  approved_amount   integer [note: 'NAT-46: admin may cut it. Installments build from this. Reason goes in loan_approval.comment.']
  student_year      smallint [not null, note: '1-4']
  purpose           text [not null]
  additional_note   text
  bank_name         text [not null]
  bank_account_no   text [not null]
  bank_account_name text [not null]
  installment_count smallint [not null, note: '1-3 only']
  first_due_date    date [not null, note: 'submitted_at + 30 days']
  status            loan_status [not null, default: 'draft']
  submitted_at      timestamptz
  cancelled_at      timestamptz
  cancelled_by      uuid [ref: > app_user.id, note: 'student before the advisor signs; admin after']
  disbursed_at      timestamptz
  closed_at         timestamptz
  created_at        timestamptz [not null, default: `now()`]
  updated_at        timestamptz [not null, default: `now()`]
  assigned_admin_id uuid [ref: > app_user.id, note: 'Admin who sent the request to Executive; preserved on Executive return']

  indexes {
    student_id
    (advisor_id, status)
    (assigned_admin_id, status)
  }
  Note: 'NAT-24. Partial unique index on student_id WHERE status NOT IN (closed, rejected, cancelled) allows only one open loan per student.'
}

Table loan_approval {
  id         bigserial [pk]
  loan_id    uuid [ref: > loan_request.id, not null]
  step       approval_step [not null]
  attempt    smallint [not null, default: 1]
  decision   decision [not null, default: 'pending']
  decided_by uuid [ref: > app_user.id]
  decided_at timestamptz
  comment    text
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (loan_id, step, attempt) [unique]
    (loan_id, step) [note: 'partial unique index for pending rows only']
  }
  Note: 'NAT-19: one row per approval step, so decision history survives.'
}

Table installment {
  id          bigserial [pk]
  loan_id     uuid [ref: > loan_request.id, not null]
  seq         smallint [not null, note: '1-3']
  due_date    date [not null]
  amount_due  integer [not null]
  amount_paid integer [not null, default: 0]
  settled_at  timestamptz

  indexes {
    (loan_id, seq) [unique]
    due_date [note: 'partial: WHERE settled_at IS NULL']
  }
  Note: 'NAT-29: amount_due is rewritten on remaining rows when a student overpays.'
}

Table payment {
  id             uuid [pk, default: `gen_random_uuid()`]
  loan_id        uuid [ref: > loan_request.id, not null]
  installment_id bigint [ref: > installment.id]
  amount         integer [not null]
  slip_url       text
  slip_ref       text [unique, note: 'bank transaction ref: same slip cannot be reused']
  status         text [not null, default: 'pending_review', note: 'pending_review | confirmed | rejected']
  confirmed_by   uuid [ref: > app_user.id]
  confirmed_at   timestamptz
  paid_at        timestamptz
  created_at     timestamptz [not null, default: `now()`]

  Note: 'NAT-31 slip evidence and NAT-33 confirmation status.'
}

Table fund_transaction {
  id           bigserial [pk]
  kind         text [not null, note: 'top_up | disburse | repayment | adjustment']
  amount       integer [not null]
  direction    smallint [not null, note: '+1 in, -1 out']
  loan_id      uuid [ref: > loan_request.id]
  performed_by uuid [ref: > app_user.id, not null]
  slip_url     text [note: "the admin's own transfer slip on disbursement"]
  note         text
  created_at   timestamptz [not null, default: `now()`]

  Note: 'NAT-40/46/47. Fund balance = sum(amount * direction). Never a stored column.'
}

Table audit_log {
  id          bigserial [pk]
  actor_id    uuid [ref: > app_user.id, not null]
  action      text [not null]
  entity_type text [not null]
  entity_id   text [not null]
  before      jsonb
  after       jsonb
  created_at  timestamptz [not null, default: `now()`]

  indexes {
    (entity_type, entity_id)
  }
  Note: 'NAT-49: every admin action, with before/after.'
}

Table notification_outbox {
  id            uuid [pk, default: `gen_random_uuid()`]
  dedupe_key    text [not null, unique]
  event_type    text [not null]
  payload       jsonb [not null]
  status        notification_status [not null, default: 'pending']
  attempt_count integer [not null, default: 0]
  available_at  timestamptz [not null, default: `now()`]
  delivered_at  timestamptz
  last_error    text
  created_at    timestamptz [not null, default: `now()`]
  updated_at    timestamptz [not null, default: `now()`]

  indexes {
    (status, available_at)
  }
  Note: 'NAT-28/NAT-171: durable claim/retry handoff for installment reminder delivery.'
}

// NAT-34: view student_conduct (overdue_count, late_payment_count, max_days_late,
// is_delinquent) is derived from installment + loan_request. Views are not drawn
// by dbdiagram — see db/001_init.sql.
